--- a/styles/main.css
+++ b/styles/main.css
@@ -1,1 +1,17 @@
-/*# sourceMappingURL=main.css.map */
+.wrap {
+  max-width: 1200px;
+  margin: 10px auto;
+  padding: 20px;
+  font-size: 64px;
+}
+
+.age_block {
+  margin: 30px 0;
+  width: 100px;
+  display: flex;
+  box-sizing: border-box;
+}
+
+.year {
+  width: 400px;
+}/*# sourceMappingURL=main.css.map */
