--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,10 +5,10 @@
     font-size: 64px;
 };
 
-.age_block {
+.age_block, .time, .bday {
     margin: 30px 0;
-    width: 100px;
-    display: flex;
+    //width: 100px;
+    //display: flex;
     box-sizing: border-box;
 };
 
